--- a/FitMap/app/src/main/res/layout/fragment_home.xml
+++ b/FitMap/app/src/main/res/layout/fragment_home.xml
@@ -6,56 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".homeFragment">
 
-    <android.support.constraint.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.SearchView
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/search_view">
+            android:layout_height="match_parent">
 
-        </android.support.v7.widget.SearchView>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toBottomOf="@id/search_view"
-            android:id="@+id/scroll_view">
-
-            <android.support.constraint.ConstraintLayout
+            <android.support.v7.widget.SearchView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:id="@+id/search_view">
 
-            </android.support.constraint.ConstraintLayout>
-        </ScrollView>
+            </android.support.v7.widget.SearchView>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toBottomOf="@id/search_view"
+                android:id="@+id/scroll_view">
 
-        <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tab_layout"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:layout_constraintTop_toBottomOf="@id/scroll_view">
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        </android.support.design.widget.TabLayout>
+                </android.support.constraint.ConstraintLayout>
+            </ScrollView>
 
-        <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/view_pager"
-            app:layout_constraintTop_toBottomOf="@id/tab_layout">
+            <android.support.design.widget.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tab_layout"
+                app:tabMode="fixed"
+                app:tabGravity="fill"
+                app:layout_constraintTop_toBottomOf="@id/scroll_view">
 
-        </android.support.v4.view.ViewPager>
+            </android.support.design.widget.TabLayout>
 
-        <Button
-            android:id="@+id/btnStart_activiteit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start nieuwe activiteit"
-            android:onClick="startActiviteit"
-            android:layout_marginBottom="10dp" />
+            <android.support.v4.view.ViewPager
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/view_pager"
+                app:layout_constraintTop_toBottomOf="@id/tab_layout">
 
+            </android.support.v4.view.ViewPager>
 
-    </android.support.constraint.ConstraintLayout>
+            <Button
+                android:id="@+id/btnStart_activiteit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Start nieuwe activiteit"
+                android:onClick="startActiviteit"
+                app:layout_constraintTop_toBottomOf="@id/view_pager"/>
+
+          <Button
+                android:layout_width="70dp"
+                android:layout_height="58dp"
+                android:backgroundTint="#FFFFFF"
+                android:drawableBottom="@android:drawable/ic_menu_manage"
+                android:foreground="@android:drawable/ic_menu_manage"
+                android:foregroundTint="#000000"
+                android:onClick="openInstellingen"
+                app:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+                app:layout_constraintBottom_toBottomOf="@id/tab_layout"
+                app:layout_constraintEnd_toEndOf="@id/tab_layout" />
+               
+
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
 
 </FrameLayout>
