--- a/FitMap/app/src/main/res/navigation/nav_graph.xml
+++ b/FitMap/app/src/main/res/navigation/nav_graph.xml
@@ -35,6 +35,21 @@
         android:id="@+id/homeFragment"
         android:name="com.example.eilishvds.fitmap.homeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action android:id="@+id/action_home_to_settings" app:destination="@+id/settingsFragment"/>
+        <action android:id="@+id/action_home_to_aanmakenActiviteit" app:destination="@+id/aanmakenActiviteit"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.eilishvds.fitmap.settingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings"/>
+
+    <fragment
+        android:id="@+id/aanmakenActiviteit"
+        android:name="com.example.eilishvds.fitmap.aanmakenActiviteit"
+        android:label="fragment_aanmaken_activiteit"
+        tools:layout="@layout/fragment_aanmaken_activiteit" />
 
 </navigation>
