--- a/FitMap/app/src/main/res/layout/fragment_email_wijzigen.xml
+++ b/FitMap/app/src/main/res/layout/fragment_email_wijzigen.xml
@@ -32,10 +32,9 @@
             app:layout_constraintTop_toBottomOf="@id/text_emailWijzigen"
             android:layout_marginTop="32dp"/>
 
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/edit_emailWijzigen_huidigEmail"
             app:layout_constraintTop_toBottomOf="@id/text_huidigEmail"/>
