--- a/FitMap/app/src/main/res/navigation/nav_graph.xml
+++ b/FitMap/app/src/main/res/navigation/nav_graph.xml
@@ -49,6 +49,7 @@
         <action android:id="@+id/action_instellingen_to_wachtwoordWijzigen" app:destination="@+id/wachtwoordWijzigenFragment"/>
         <action android:id="@+id/action_instellingen_to_emailWijzigen" app:destination="@+id/emailWijzigenFragment"/>
         <action android:id="@+id/action_instellingen_to_popup" app:destination="@+id/popupFragment"/>
+        <action android:id="@+id/action_instellingen_to_login" app:destination="@+id/loginFragment"/>
     </fragment>
 
     <fragment
@@ -57,6 +58,7 @@
         android:label="fragment_aanmaken_activiteit"
         tools:layout="@layout/fragment_aanmaken_activiteit">
         <action android:id="@+id/action_aanmakenActiviteit_to_home" app:destination="@+id/homeFragment"/>
+        <action android:id="@+id/action_aanmakenActiviteit_to_locatieMap" app:destination="@+id/locatieMapFragment"/>
     </fragment>
 
     <fragment
@@ -83,4 +85,12 @@
         <action android:id="@+id/action_popup_to_instellingen" app:destination="@+id/settingsFragment"/>
         <action android:id="@+id/action_popup_to_inloggen" app:destination="@+id/loginFragment"/>
     </fragment>
+
+    <fragment
+        android:id="@+id/locatieMapFragment"
+        android:name="com.example.eilishvds.fitmap.LocatieMapFragment"
+        android:label="fragment_locatie_map"
+        tools:layout="@layout/fragment_locatie_map">
+    </fragment>
+
 </navigation>
