--- a/FitMap/app/src/main/res/layout/fragment_locatie_map.xml
+++ b/FitMap/app/src/main/res/layout/fragment_locatie_map.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LocatieMapFragment">
 
     <android.support.constraint.ConstraintLayout
@@ -14,5 +15,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <Button
+            android:id="@+id/btn_annuleerLocatieMap"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="?android:attr/homeAsUpIndicator"
+            app:layout_constraintStart_toStartOf="@id/mapView"
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="annuleerlocatieMap"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_beindigActiviteit"
+            android:text="beëindig activiteit"
+            android:onClick="stopActiviteit"
+            app:layout_constraintBottom_toBottomOf="@id/mapView"
+            app:layout_constraintStart_toStartOf="@id/mapView"
+            android:layout_marginLeft="110dp"/>
     </android.support.constraint.ConstraintLayout>
+
 </FrameLayout>
