--- a/VorigeVersies/FitMap/app/src/main/res/layout/fragment_settings.xml
+++ b/VorigeVersies/FitMap/app/src/main/res/layout/fragment_settings.xml
@@ -14,7 +14,7 @@
             android:id="@+id/btn_annuleerInstellingen"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:drawableBottom="?android:attr/homeAsUpIndicator"
+            android:background="?android:attr/homeAsUpIndicator"
             app:layout_constraintStart_toStartOf="@id/text_instellingen"
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="annuleerInstellingen"/>
@@ -30,16 +30,39 @@
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <Button
+            android:id="@+id/btn_logoff"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@android:drawable/ic_lock_power_off"
+            android:layout_marginTop="15dp"
+            android:onClick="LogOff"
+            app:layout_constraintTop_toBottomOf="@id/text_instellingen"
+            android:layout_marginLeft="140dp"
+            app:layout_constraintStart_toStartOf="@id/text_instellingen"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log uit"
+            android:id="@+id/text_loguit"
+            app:layout_constraintTop_toBottomOf="@id/text_instellingen"
+           app:layout_constraintStart_toEndOf="@id/btn_logoff"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Persoonlijke instellingen"
             android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_instellingen"
-            android:layout_marginTop="35dp"
+            app:layout_constraintTop_toBottomOf="@id/btn_logoff"
             android:textAlignment="center"
             android:textColor="#6E6E6E"
-            android:id="@+id/text_PersInstellingen"/>
+            android:id="@+id/text_PersInstellingen"
+            android:layout_marginTop="20dp"/>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
