--- a/FitMap/app/src/main/res/layout/fragment_annuleer_activiteit_teken.xml
+++ b/FitMap/app/src/main/res/layout/fragment_annuleer_activiteit_teken.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".annuleerActiviteitFragment">
+    tools:context=".annuleerActiviteitTekenFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:text="Annuleren"
             app:layout_constraintTop_toBottomOf="@id/text_annulatie_warning"
             app:layout_constraintEnd_toStartOf="@id/btn_annulatie_bevestigen"
-            android:onClick="annuleerAnnulatieLocatie"
+            android:onClick="annuleerAnnulatieTeken"
             android:layout_marginTop="20dp"/>
 
         <Button
@@ -50,8 +50,7 @@
             app:layout_constraintTop_toBottomOf="@id/text_annulatie_warning"
             android:backgroundTint="#DF013A"
             android:textColor="#FFFFFF"
-            android:onClick="bevestingAnnulatieLocatie"
+            android:onClick="bevestingAnnulatieTeken"
             android:layout_marginTop="20dp"/>
     </android.support.constraint.ConstraintLayout>
-
 </FrameLayout>
