--- a/FitMap/app/src/main/res/layout/fragment_home.xml
+++ b/FitMap/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/card_view"
+                        android:layout_marginTop="5dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/text_home_titel_cardView"
+                            android:text=""
+                            android:textSize="10dp"/>
+
+                    </android.support.v7.widget.CardView>
+
                 </android.support.constraint.ConstraintLayout>
             </ScrollView>
 
