--- a/FitMap/app/src/main/res/layout/fragment_home.xml
+++ b/FitMap/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,8 @@
             <android.support.v7.widget.SearchView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/search_view">
+                android:id="@+id/search_view"
+                android:clickable="true">
 
             </android.support.v7.widget.SearchView>
             <ScrollView
@@ -26,26 +27,13 @@
                 app:layout_constraintTop_toBottomOf="@id/search_view"
                 android:id="@+id/scroll_view">
 
-                <android.support.constraint.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:id="@+id/home_linear_layout"
+                    android:orientation="vertical">
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/card_view"
-                        android:layout_marginTop="5dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/text_home_titel_cardView"
-                            android:text=""
-                            android:textSize="10dp"/>
-
-                    </android.support.v7.widget.CardView>
-
-                </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
             </ScrollView>
 
             <android.support.design.widget.TabLayout
