--- a/FitMap/app/src/main/res/layout/fragment_info_activiteit.xml
+++ b/FitMap/app/src/main/res/layout/fragment_info_activiteit.xml
@@ -29,7 +29,8 @@
                 android:layout_marginRight="10dp"
                 app:layout_constraintTop_toBottomOf="@id/btn_profiel"
                 android:id="@+id/check_opslaan"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:enabled="true"/>
 
             <com.google.android.gms.maps.MapView
                 android:layout_width="match_parent"
