--- a/FitMap/app/src/main/res/layout/fragment_info_activiteit.xml
+++ b/FitMap/app/src/main/res/layout/fragment_info_activiteit.xml
@@ -30,7 +30,9 @@
                 app:layout_constraintTop_toBottomOf="@id/btn_profiel"
                 android:id="@+id/check_opslaan"
                 android:layout_marginTop="5dp"
-                android:enabled="true"/>
+                android:enabled="true"
+                android:checked="false"
+                android:onClick="isOpslaanChecked"/>
 
             <com.google.android.gms.maps.MapView
                 android:layout_width="match_parent"
