--- a/FitMap/app/src/main/res/layout/fragment_settings.xml
+++ b/FitMap/app/src/main/res/layout/fragment_settings.xml
@@ -55,9 +55,31 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Persoonlijke instellingen"
+            android:text="Nuttige info"
             android:textSize="16dp"
             app:layout_constraintTop_toBottomOf="@id/btn_logoff"
+            android:textAlignment="center"
+            android:textColor="#6E6E6E"
+            android:id="@+id/text_titelNuttigeInfo"
+            android:layout_marginTop="20dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_gewicht"
+            android:text="Stel je gewicht in"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/text_titelNuttigeInfo"
+            android:textSize="14dp"
+            android:layout_marginTop="10dp"
+            android:onClick="GewichtInstellen"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Persoonlijke instellingen"
+            android:textSize="16dp"
+            app:layout_constraintTop_toBottomOf="@id/btn_gewicht"
             android:textAlignment="center"
             android:textColor="#6E6E6E"
             android:id="@+id/text_PersInstellingen"
