--- a/FitMap/app/src/main/res/navigation/nav_graph.xml
+++ b/FitMap/app/src/main/res/navigation/nav_graph.xml
@@ -50,6 +50,7 @@
         <action android:id="@+id/action_instellingen_to_emailWijzigen" app:destination="@+id/emailWijzigenFragment"/>
         <action android:id="@+id/action_instellingen_to_popup" app:destination="@+id/popupFragment"/>
         <action android:id="@+id/action_instellingen_to_login" app:destination="@+id/loginFragment"/>
+        <action android:id="@+id/action_instellingen_to_gewicht" app:destination="@+id/gewichtFragment"/>
     </fragment>
 
     <fragment
@@ -130,6 +131,14 @@
         tools:layout="@layout/fragment_info_activiteit">
         <action android:id="@+id/action_infoActiviteit_to_home" app:destination="@+id/homeFragment"/>
         <action android:id="@+id/action_infoActiviteit_to_aanmakenActiviteit" app:destination="@+id/aanmakenActiviteit"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/gewichtFragment"
+        android:name="com.example.eilishvds.fitmap.GewichtFragment"
+        android:label="fragment_gewicht"
+        tools:layout="@layout/fragment_gewicht">
+        <action android:id="@+id/action_gewicht_to_instellingen" app:destination="@+id/settingsFragment"/>
     </fragment>
 
 </navigation>
