--- a/FitMap/app/src/main/res/layout/fragment_gewicht.xml
+++ b/FitMap/app/src/main/res/layout/fragment_gewicht.xml
@@ -3,12 +3,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".GewichtFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+
+        <TextView
+            android:text="Gewicht instellen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_GewichtInstellen"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            android:textColor="#424242"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:text="Gewicht"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_gewicht"
+            android:textSize="16dp"
+            android:textColor="#6E6E6E"
+            app:layout_constraintTop_toBottomOf="@id/text_GewichtInstellen"
+            android:layout_marginTop="32dp"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/edit_gewichtInstellen_gewicht"
+            app:layout_constraintTop_toBottomOf="@id/text_gewicht"/>
+
+        <Button
+            android:text="Gewicht aanpassen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_gewichtInstellen"
+            android:onClick="GewichtAanpassen"
+            app:layout_constraintTop_toBottomOf="@+id/edit_gewichtInstellen_gewicht"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#01DFA5"
+            android:textColor="#FFFFFF"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Annuleer"
+            android:textAlignment="center"
+            android:textColor="#0174DF"
+            android:id="@+id/text_annuleer_gewichtInstellen"
+            app:layout_constraintTop_toBottomOf="@+id/btn_gewichtInstellen"
+            android:textSize="10dp"
+            android:onClick="annuleerGewichtInstellen"
+            android:layout_marginTop="16dp"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
