--- a/FitMap/app/src/main/res/layout/viewpager_tab2.xml
+++ b/FitMap/app/src/main/res/layout/viewpager_tab2.xml
@@ -28,4 +28,12 @@
         android:layout_centerInParent="true"
         android:layout_below="@id/tab_2_kmH" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_2_calH"
+        android:textAlignment="center"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/tab_2_tijd" />
+
 </RelativeLayout>
