--- a/FitMap/app/src/main/res/layout/fragment_settings.xml
+++ b/FitMap/app/src/main/res/layout/fragment_settings.xml
@@ -74,12 +74,22 @@
             android:layout_marginTop="10dp"
             android:onClick="GewichtInstellen"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_regio"
+            android:text="Stel je regio in"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/btn_gewicht"
+            android:textSize="14dp"
+            android:onClick="RegioInstellen"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Persoonlijke instellingen"
             android:textSize="16dp"
-            app:layout_constraintTop_toBottomOf="@id/btn_gewicht"
+            app:layout_constraintTop_toBottomOf="@id/btn_regio"
             android:textAlignment="center"
             android:textColor="#6E6E6E"
             android:id="@+id/text_PersInstellingen"
