--- a/FitMap/app/src/main/res/layout/viewpager_tab1.xml
+++ b/FitMap/app/src/main/res/layout/viewpager_tab1.xml
@@ -20,4 +20,12 @@
         android:layout_centerInParent="true"
         android:layout_below="@id/tab_1_titel" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_1_middel"
+        android:textAlignment="center"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/tab_1_beschrijving" />
+
 </RelativeLayout>
